objects/Subscription__c.object
<CustomObject>
    <description>To store subscription for different offering types</description>
    <fields>
        <fullName>ACV_Year_10__c</fullName>
        <label>ACV Year 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACV_Year_1__c</fullName>
        <label>ACV Year 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACV_Year_2__c</fullName>
        <label>ACV Year 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACV__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? Stores annual contract value
Downstream Impact? Effects reporting
Which department is owner? IT/PureCloud Team</description>
        <inlineHelpText>Annual Contract Value.</inlineHelpText>
        <label>ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <description>What it Does? CCDB - Stores Account owner name
Downstream Impact? CCDB 
Which department is owner? IT/CSM</description>
        <formula>Account__r.Owner.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>What it Does? Stores end user account
Downstream Impact? Effects reporting and billing integration
Which department is owner? IT/PureCloud Team</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Subscriptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amendment_Date__c</fullName>
        <description>What it Does? Stores amended date of this subscription
Downstream Impact? For quote totals 
Which department is owner? IT/PureCloud Team</description>
        <label>Amendment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amendment_For__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? Stores previous subscription which is amended
Downstream Impact? Effects reporting and billing integration
Which department is owner? IT/PureCloud Team</description>
        <inlineHelpText>Previous CCDB/Subscription record that this CCDB/Subscription amended.</inlineHelpText>
        <label>Amendment For</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>CCDBs/Subscriptions (Amendment For)</relationshipLabel>
        <relationshipName>NewSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anniversary_Date__c</fullName>
        <description>What it Does? Stores anniversary date.
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annual_Price_Escalation_Other__c</fullName>
        <description>What it Does? Stores &apos;Other&apos; value for Annual Price Escalation.
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Annual Price Increase Other %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_Price_Escalation__c</fullName>
        <description>What it Does? Stores Annual Price Escalation %.
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Annual Price Increase %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_Price_Increase__c</fullName>
        <description>What it does? Stores the Annual price increase . Downstream Impact?Reporting. Which Department is Owner? IT</description>
        <label>Annual Price Increase %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AppFoundry_Trial_Start_Date__c</fullName>
        <description>What it does? Used to indicate start of Trial Start Date. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>Trial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_Renewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does? Identifies whether this subscription got auto renewed or not
Downstream Impact? Effects reporting and renewal process
Which department is owner? IT/PureCloud Team</description>
        <inlineHelpText>If this box is checked, the inactive CCDB/Subscription has been auto renewed and a new subscription is now active.</inlineHelpText>
        <label>Auto Renewed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_To_Emails__c</fullName>
        <description>What it Does? Stores bill to emails from order addresses
Downstream Impact? Effects invoicing
Which department is owner? Billing</description>
        <label>Bill To Emails</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? Stores bill to account 
Downstream Impact? Effects reporting and billing integration 
Which department is owner? IT/PureCloud Team</description>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Category__c</fullName>
        <description>What it Does? Stores type of billing (M2M, Annual M2M or Annual Pre-Pay)
Downstream Impact? Effects reporting and billing
Which department is owner? IT/PureCloud Team</description>
        <inlineHelpText>Method in which we bill customers for their committed licenses, whether pre-pay or monthly.</inlineHelpText>
        <label>Billing Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Pre-Pay</fullName>
                </value>
                <value>
                    <fullName>Annual M2M</fullName>
                </value>
                <value>
                    <fullName>M2M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Period__c</fullName>
        <description>What it Does? Stores billing period of the subscription 
Downstream Impact? Effects DQ and reporting
Which department is owner? IT/PureCloud Team</description>
        <label>Billing Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Burst_Allowance__c</fullName>
        <description>What it does? Stores the Bursting Cap . Downstream Impact?Reporting. Which Department is Owner? Finance</description>
        <label>Burst Allowance %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Burst_Price_Premium__c</fullName>
        <description>What it does? Stores the Bursting Premium . Downstream Impact?Reporting. Which Department is Owner? Finance</description>
        <label>Burst Price Premium %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bursting_Price_Premium__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it does? Stores the Bursting Premium . Downstream Impact?Reporting. Which Department is Owner? Finance</description>
        <label>Burst Price Premium %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Downturn_Clause__c</fullName>
        <label>Business_Downturn_Clause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PlaceHolder Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? Stores partner account
Downstream Impact? Effects reporting and billing
Which department is owner? IT/PureCloud Team</description>
        <label>Sold To/Business Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Subscriptions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMRR__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? Stores monthly committed value
Downstream Impact? Effects reporting
Which department is owner? IT/PureCloud Team</description>
        <inlineHelpText>Committed Monthly Recurring Revenue.</inlineHelpText>
        <label>CMRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSM_Owner_ID__c</fullName>
        <description>What it Does? Stores CSM Owner info
Downstream Impact? Effects cloud deployment
Which department is owner? IT/PureCloud Team</description>
        <formula>Account__r.CSM_Account_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSM Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloud_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cloud Deployment</label>
        <referenceTo>Cloud_Deployment__c</referenceTo>
        <relationshipLabel>CCDBs/Subscriptions</relationshipLabel>
        <relationshipName>CCDBs_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloud_Deplyment_Name__c</fullName>
        <formula>/*LEFT((Account__r.Name+&apos; - &apos;+TEXT(Offering_Type__c) + 
IF(AND(NOT(ISBLANK(Quote__c)),NOT(ISBLANK(TEXT(Quote__r.BigMachines__Opportunity__r.Offering_Detail__c)))), &apos;, &apos; + TEXT(Quote__r.BigMachines__Opportunity__r.Offering_Detail__c), &quot;&quot;)),80)*/

LEFT(Account__r.Name, 80)</formula>
        <label>Cloud Deployment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Committed_Term_Date_Validation__c</fullName>
        <description>What it Does? Stores go live date
Downstream Impact? Effects reporting and revpro integration
Which department is owner? IT/RevPro Team</description>
        <label>Committed Term Date Validation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Effective_Date__c</fullName>
        <description>What it does? Stores the contract effective date . Downstream Impact?Reporting. Which Department is Owner? Finance</description>
        <inlineHelpText>Date the agreement is considered to take effect.</inlineHelpText>
        <label>Governing Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <description>What it does? Stores Contract Expiration Dates. Downstream Impact? Reporting. Which Department is Owner? Finance.</description>
        <inlineHelpText>Date the agreement is set to expire.</inlineHelpText>
        <label>Governing Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signature_Date__c</fullName>
        <description>What it Does? CCDB - Store the completed date of Docusign status of opportunity (Auto updated by trigger) 
Downstream Impact? CCDB 
Which department is owner? IT/CSM</description>
        <label>Contract Signature Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>What it does? Stores the contract type. Downstream Impact?Reporting. Which Department is Owner? Finance</description>
        <inlineHelpText>Category of legal document.</inlineHelpText>
        <label>Governing Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adoption Agreement</fullName>
                </value>
                <value>
                    <fullName>Alliance Agreement</fullName>
                </value>
                <value>
                    <fullName>Assignment Agreement</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Business Associate Agreement</fullName>
                </value>
                <value>
                    <fullName>Change Order</fullName>
                </value>
                <value>
                    <fullName>Consulting Agreement</fullName>
                </value>
                <value>
                    <fullName>Correspondence</fullName>
                </value>
                <value>
                    <fullName>Distribution Agreement</fullName>
                </value>
                <value>
                    <fullName>Escrow Agreement</fullName>
                </value>
                <value>
                    <fullName>Evaluation Agreement</fullName>
                </value>
                <value>
                    <fullName>Interoperability Agreement</fullName>
                </value>
                <value>
                    <fullName>Joint Development Agreement</fullName>
                </value>
                <value>
                    <fullName>Joint Marketing Agreement</fullName>
                </value>
                <value>
                    <fullName>Letter of Engagement</fullName>
                </value>
                <value>
                    <fullName>Letter of Intent</fullName>
                </value>
                <value>
                    <fullName>Maintenance Agreement</fullName>
                </value>
                <value>
                    <fullName>Master Subscription Agreement</fullName>
                </value>
                <value>
                    <fullName>Memorandum of Understanding</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Agreement</fullName>
                </value>
                <value>
                    <fullName>MSLSA</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
                <value>
                    <fullName>OEM (Original Equipment Manufacturer)</fullName>
                </value>
                <value>
                    <fullName>Participation Agreement</fullName>
                </value>
                <value>
                    <fullName>Partner Agreement</fullName>
                </value>
                <value>
                    <fullName>Pre-Release</fullName>
                </value>
                <value>
                    <fullName>PS Agreement (for Clients)</fullName>
                </value>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                </value>
                <value>
                    <fullName>Service Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_terms_drive_ACV_Change__c</fullName>
        <label>Contract terms drive ACV Change?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_GARN__c</fullName>
        <description>What it Does? Stores Account&apos;s Garn Code 
Downstream Impact? Effects cloud deployment 
Which department is owner? IT/PureCloud Team</description>
        <formula>Account__r.SAP_Account_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer GARN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_SFDC_ID__c</fullName>
        <description>What it Does? Stores Account ID 
Downstream Impact? Effects cloud deployment 
Which department is owner? IT/PureCloud Team</description>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer SFDC ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Registration_Discount__c</fullName>
        <description>What it Does? Stores the Deal Registration Discount. 
Downstream Impact? DDS 
Which department is owner? IT</description>
        <label>Deal Registration Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deployment_Model__c</fullName>
        <description>What it Does? stores local or remote control for PureConnect Cloud quote 
Downstream Impact? Impacts quoting tool 
Which department is owner? Sales Ops</description>
        <label>Deployment Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local Control</fullName>
                </value>
                <value>
                    <fullName>Remote Control</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date_of_AppFoundry_Trial_Projects__c</fullName>
        <description>What it does? Used to indicate End of Trials. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>End Date of Trial</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_User_Partner_Contract_Number__c</fullName>
        <label>End User/Partner Contract Number</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gainsight_Relationship_Type__c</fullName>
        <description>What it Does? Identifies Gainsight_Relationship_Type based on opportunity 
Downstream Impact? Cloud Renewal 
Which department is owner? IT</description>
        <inlineHelpText>An administrator field used for the Gainsight&apos;s Rule Engine and reporting.</inlineHelpText>
        <label>Gainsight Relationship Type</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentive_Rebate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? For PC : To store additional rebate or incentive by finance or DealDesk 
Downstream Impact? PC quotes 
Which department is owner? IT/Finance</description>
        <label>Incentive/Rebate(%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Includes_Special_Offers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it does? CCDB / renewal opportunity 
Downstream Impact? Renewal opportunity. 
Which Department is Owner? IT</description>
        <label>Includes Special Offers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Cloned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does? Identifies whether subscription is cloned to make manual changes 
Downstream Impact? Effects billing 
Which department is owner? IT/Finance/PureCloud Team</description>
        <label>Is Cloned?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Exceptions__c</fullName>
        <description>What it Does? Review components for legal team 
Downstream Impact? Effects legal review process 
Which department is owner? Legal</description>
        <inlineHelpText>Nonstandard or negotiated sections in the legal agreement.</inlineHelpText>
        <label>Governing Contract Legal Exceptions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Legal_Deal_Review</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lever__c</fullName>
        <description>What it does? Store the levers applied to the associated quote. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>PureBridge Levers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lever 1</fullName>
                </value>
                <value>
                    <fullName>Lever 2</fullName>
                </value>
                <value>
                    <fullName>Lever 3</fullName>
                </value>
                <value>
                    <fullName>Lever 4</fullName>
                </value>
                <value>
                    <fullName>Lever 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>M2M_Converted_Date__c</fullName>
        <label>M2M Converted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSA_Link_Type__c</fullName>
        <description>What it Does? CCDB - Store the MSA Link Type (auto updated from quote) 
Downstream Impact? CCDB 
Which department is owner? IT/CSM</description>
        <inlineHelpText>Link type from the submitted quote, whether custom or standard.</inlineHelpText>
        <label>Governing Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSA_Link__c</fullName>
        <description>What it Does? CCDB - Store the MSA Link(auto updated from quote) 
Downstream Impact? CCDB 
Which department is owner? IT/CSM</description>
        <label>Governing Contract Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Billing_Review_Status__c</fullName>
        <label>Manual Billing Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs Review</fullName>
                </value>
                <value>
                    <fullName>Approved for Manual Billing</fullName>
                </value>
                <value>
                    <fullName>Removed from Manual Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Order_Number__c</fullName>
        <description>What it Does? CCDB - Store the name of master order 
Downstream Impact? CCDB 
Which department is owner? IT/CSM/PureCloud</description>
        <formula>Master_Order__r.Name</formula>
        <label>Master Order #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it does? Lookup to Master Order. 
Downstream Impact? Used for RevPro 
Which Department is Owner? IT/PureCloud</description>
        <label>Master Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>CCDBs/Subscriptions (Master Order)</relationshipLabel>
        <relationshipName>CCDBs_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Special_Offer_Terms__c</fullName>
        <label>Master Order Special Offer</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Merge_From__c</fullName>
        <label>Merge_From</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>What it Does? Stores response from PureCloud
Downstream Impact? Effects integration with billing
Which department is owner? IT/PureCloud Team</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Minimum_Agent_Quantity__c</fullName>
        <description>What it Does? CCDB - Store the agent seat count (auto updated from quote) 
Downstream Impact? CCDB 
Which department is owner? IT/CSM</description>
        <inlineHelpText>Minimum number of agents this customer has committed to on a monthly basis.</inlineHelpText>
        <label>Minimum Agent Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Minimum__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What it Does? Stores PureCloud monthly minimum amount based on partner and owner
Downstream Impact? Effects reporting and amendment
Which department is owner? IT/PureCloud Team</description>
        <inlineHelpText>If billing actual usage only, this is the minimum monthly amount that Genesys will invoice the customer. Excludes telco usage.</inlineHelpText>
        <label>Monthly Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mulit_Year_ACV_Calculation_Logic__c</fullName>
        <label>Mulit-Year ACV Calculation Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_Year_ACV_Year_10__c</fullName>
        <label>Multi-Year ACV - Year 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Multi_Year_ACV_Year_1__c</fullName>
        <label>Multi-Year ACV - Year 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Multi_Year_ACV_Year_2__c</fullName>
        <label>Multi-Year ACV - Year 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_Billing_During_Ramp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it does? Indicate to not bill during ramp period. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>No Billing During Ramp Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <description>What it does? Field to store Offer of related Quote. Downstream Impact? None. Which Department is Owner? IT</description>
        <label>Offer</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Detail__c</fullName>
        <formula>IF(NOT(ISBLANK(Opportunity_LookUp__c)),TEXT(Opportunity_LookUp__r.Offering_Detail__c), &quot;&quot;)</formula>
        <label>Offering Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <description>What it Does? Stores different types of offering
Downstream Impact? Effects reporting and quote amendment/creation
Which department is owner? IT/PureCloud Team</description>
        <label>Offering Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PureConnect Cloud</fullName>
                    <default>true</default>
                    <label>PureConnect Cloud</label>
                </value>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>PureEngage Cloud</fullName>
                </value>
                <value>
                    <fullName>PureEngage Subscription</fullName>
                </value>
                <value>
                    <fullName>PureConnect Subscription</fullName>
                </value>
                <value>
                    <fullName>Premier Edition Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_LookUp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? Stores opportunity sfdc id 
Downstream Impact? Effects cloud deployment creation and CCDB updates
Which department is owner? IT/PureCloud Team</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <description>What it Does? CCDB - Stores AE Name 
Downstream Impact? CCDB 
Which department is owner? IT/CSM</description>
        <formula>Opportunity_LookUp__r.Owner.FirstName + &quot; &quot; + Opportunity_LookUp__r.Owner.LastName</formula>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_URL__c</fullName>
        <description>What it Does? Stores opportunity link
Downstream Impact? N/A
Which department is owner? IT</description>
        <formula>IF(NOT(ISBLANK(Quote__c)), HYPERLINK(&quot;https://genesys.my.salesforce.com/&quot;+Quote__r.BigMachines__Opportunity__c, Quote__r.BigMachines__Opportunity__r.Name, &quot;_blank&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>What it Does? Stores opportunity sfdc id
Downstream Impact? Effects cloud deployment creation
Which department is owner? IT/PureCloud Team</description>
        <formula>IF(NOT(ISBLANK(Quote__c)), Quote__r.BigMachines__Opportunity__c, &quot;&quot;)</formula>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optional_extended_term_length_Months__c</fullName>
        <description>What it Does? Stores optional extended term length of the quote.
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Optional extended term length (Months)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Special_Offer__c</fullName>
        <label>Order Special Offer</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? Stores order
Downstream Impact? Effects reporting and billing
Which department is owner? Billing/PureCloud Team</description>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_Id__c</fullName>
        <inlineHelpText>The ID of the PureCloud Org tied to the subscription. NOTE: If the Org ID is blank, this subscription is not currently tied to a PureCloud Org.</inlineHelpText>
        <label>Org Id/Unique Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <formula>Cloud_Deployment__r.Org_Name__c</formula>
        <label>Org Name</label>
        <type>Text</type>
    </fields>
</CustomObject>